lib/src/compiler/tests/testdata/errors/29.out
error[E008]: unknown field or method `foo`
 --> line:4:17
  |
4 |     test_proto2.foo
  |                 ^^^ this field or method doesn't exist
  |